--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,18 @@
-node_modules
-npm-debug.log
+/npm-debug.log
+
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
