--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,7 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     
     steps:
+    - uses: actions/checkout@v2
     - name: Build and push Docker images
       uses: docker/build-push-action@v1
       with:
