--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Wouter Koch",
   "license": "MIT",
   "dependencies": {
+    "applicationinsights": "^1.8.0",
     "axios": "^0.19.2",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
