--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "form-data": "^3.0.0",
     "multer": "^1.4.2",
+    "node-cron": "^2.0.3",
     "stream": "0.0.2"
   },
   "devDependencies": {
