Legger til kommando i dev.yml. [skip-ci]

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -29,3 +29,5 @@ jobs:
         password: ${{ secrets.DOCKER_PASSWORD }}
         repository: artsdatabanken/ai
         tags: dev
+    - name: Post to slack
+      run: .github/workflows/slack.sh ${{ secrets.POST_SLACK }}
