--- a/.github/workflows/airesearch.yml
+++ b/.github/workflows/airesearch.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI_dev
+name: CI_airesearch
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
