--- a/.github/workflows/airesearch.yml
+++ b/.github/workflows/airesearch.yml
@@ -22,11 +22,10 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build and push Docker images
-      uses: docker/build-push-action@v1
+      uses: docker/build-push-action@v2
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-        repository: artsdatabanken/ai
-        tags: airesearch
+        tags: artsdatabanken/ai:airesearch
     - name: Post to slack
       run: .github/workflows/slack.sh ${{ secrets.POST_SLACK }}
