--- a/.github/workflows/airesearch.yml
+++ b/.github/workflows/airesearch.yml
@@ -21,11 +21,14 @@ jobs:
     
     steps:
     - uses: actions/checkout@v2
-    - name: Build and push Docker images
-      uses: docker/build-push-action@v2
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v1
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
+    - name: Build and push Docker images
+      uses: docker/build-push-action@v2
+      with:
         tags: artsdatabanken/ai:airesearch
     - name: Post to slack
       run: .github/workflows/slack.sh ${{ secrets.POST_SLACK }}
