--- a/.github/workflows/airesearch.yml
+++ b/.github/workflows/airesearch.yml
@@ -30,5 +30,5 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         tags: artsdatabanken/ai:airesearch
-    - name: Post to slack
-      run: .github/workflows/slack.sh ${{ secrets.POST_SLACK }}
+#    - name: Post to slack
+#      run: .github/workflows/slack.sh ${{ secrets.POST_SLACK }}
