--- a/.github/workflows/airesearch.yml
+++ b/.github/workflows/airesearch.yml
@@ -29,6 +29,9 @@ jobs:
     - name: Build and push Docker images
       uses: docker/build-push-action@v2
       with:
+        context: .
+        pull: true
+        push: true
         tags: artsdatabanken/ai:airesearch
 #    - name: Post to slack
 #      run: .github/workflows/slack.sh ${{ secrets.POST_SLACK }}
