--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "form-data": "^3.0.0",
-    "multer": "^1.4.2",
+    "multer": "^1.4.5-lts.1",
     "node-cron": "^2.0.3",
     "stream": "0.0.2"
   },
