Implement importing of taxon pictures

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
+    "start": "nodemon start",
     "dev": "nodemon start"
   },
   "author": "Wouter Koch",
