--- a/master-azure-pipelines.yml
+++ b/master-azure-pipelines.yml
@@ -8,9 +8,6 @@ trigger:
 resources:
 - repo: self
 
-variables:
-  tag: '$(Build.BuildId)'
-
 stages:
 - stage: Build
   displayName: Build image
@@ -25,8 +22,7 @@ stages:
       inputs:
         command: build
         dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
-        tags: |
-          $(tag)
+        tags: 'azure'
     - task: Docker@2
       inputs:
         containerRegistry: 'DockerHub'
