--- a/master-azure-pipelines.yml
+++ b/master-azure-pipelines.yml
@@ -20,8 +20,10 @@ stages:
     - task: Docker@2
       displayName: Build an image
       inputs:
-        command: build
-        dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
+        containerRegistry: 'DockerHub'
+        repository: 'artsdatabanken/ai'
+        command: 'build'
+        Dockerfile: '**/Dockerfile'
         tags: 'azure'
     - task: Docker@2
       inputs:
