--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "form-data": "^3.0.0",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^2.0.3",
+    "sanitize-filename": "^1.6.3",
     "stream": "0.0.2"
   },
   "devDependencies": {
