--- a/package.json
+++ b/package.json
@@ -16,16 +16,20 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-rate-limit": "^6.9.0",
     "form-data": "^3.0.0",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^2.0.3",
+    "sanitize-filename": "^1.6.3",
     "stream": "0.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
   },
-
   "nodemonConfig": {
-    "ignore": ["log/*", "taxa/*"]
+    "ignore": [
+      "log/*",
+      "taxa/*"
+    ]
   }
 }
