Update master-azure-pipelines.yml for Azure Pipelines

--- a/master-azure-pipelines.yml
+++ b/master-azure-pipelines.yml
@@ -31,3 +31,8 @@ stages:
         repository: 'artsdatabanken/ai'
         command: 'push'
         tags: 'azure'
+    - task: AzureAppServiceManage@0
+      inputs:
+        azureSubscription: 'prod-deploy-code'
+        Action: 'Restart Azure App Service'
+        WebAppName: 'adb-prod-ai-as'
