--- a/azure-pipelines-dev.yml
+++ b/azure-pipelines-dev.yml
@@ -31,3 +31,9 @@ stages:
         repository: 'artsdatabanken/ai'
         command: 'push'
         tags: 'azure-test'
+    - task: AzureCLI@2
+      inputs:
+        azureSubscription: 'test-deploy-code'
+        scriptType: 'pscore'
+        scriptLocation: 'inlineScript'
+        inlineScript: 'az webapp restart --name adb-test-ai-as --resource-group adb-test-ai-rg'
